# Gaveshak

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Gaveshak.sln  Gaveshak.vcxproj  Gaveshak.vcxproj.filters  Readme.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
MultiThreadingFW/: CMakeLists.txt
MultiThreadingFW/OpenCLUse.m/: CMakeLists.txt  MyMod.vcxproj  MyMod.vcxproj.filters  main.cpp
MultiThreadingFW/OpenCL_Use.m/: CMakeLists.txt  MyMod.vcxproj  MyMod.vcxproj.filters  OpenCL_Use.vcxproj  main.cpp
MyFramework/MyMod.m/: CMakeLists.txt  MyMod.vcxproj  MyMod.vcxproj.filters
OpenCL/: CMakeLists.txt
lib/cassandra_cpp_driver/lib/: cassandra.lib
lib/gumbo/include/: gumbo.h
lib/gumbo/lib/: gumbo_debug.lib  gumbo_release.lib
lib/libcURL/lib/: libcurl.exp  libcurl.lib  libcurl_imp.exp  libcurl_imp.lib
src/: CMakeLists.txt
src/Crawler/: CMakeLists.txt
src/Crawler/include/: Crawler.h  Crawler_Export.h
src/Crawler/src/: Crawler.cpp  main.cpp
src/Fetcher/: CMakeLists.txt
src/Fetcher/include/: Fetcher.h  FetcherService.h
src/Fetcher/src/: Fetcher.cpp  FetcherService.cpp  main.cpp
src/Fetcher/values/: ProxyServers.xml
src/Gaveshak/: CMakeLists.txt  ConsoleFormatter.h  Fetcher.cpp  Fetcher.h  Gaveshak.cpp  Gaveshak.h  Gaveshak_HandleArguments.cpp  Gaveshak_ParseArguments.cpp  Globals.cpp  Globals.h  Logger.cpp  Logger.h  UserAgent.cpp  UserAgent.h  main.cpp
src/Gaveshak/src/: Gaveshak.cpp  Gaveshak_ParseArguments.cpp  main.cpp
src/Gaveshak/values/: UserAgents.xml
src/MultiThreadingFW/OpenCLUse.m/: CMakeLists.txt  main.cpp
src/Parser/: CMakeLists.txt
src/Parser/include/: Document.h  Node.h  Object.h  Parser.h  Parser_Export.h  QueryUtil.h  Selection.h  Selector.h
src/Parser/src/: Parser.cpp
src/Utils/: CMakeLists.txt
src/Utils/include/: CassandraUtil.h  Globals.h  Logger.h  URL.h  Utils_Export.h
src/Utils/src/: CassandraUtil.cpp  Logger.cpp  URL.cpp  main.cpp
